--- a/contactus.html
+++ b/contactus.html
@@ -25,9 +25,9 @@
 
 
     <div id="intro">
-      <h1>CONTACT US </h1>
+      <center><h1>CONTACT US </h1>
       <h2>MEET US IN OUR SOCIAL MEDIA ACCOUNTS</h2>
-      </div>
+    </center></div>
   </header>
       
    <!--KRISTINE -->
