--- a/home.html
+++ b/home.html
@@ -17,8 +17,11 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
+
+
+    <section class="nav">
       <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-        <ul class="navbar-nav text-end">
+       <ul class="navbar-nav text-end">
           <li class="nav-item">
             <a class="nav-link" href="#homepage">Home</a>
           </li>
@@ -28,12 +31,13 @@
           <li class="nav-item">
             <a class="nav-link" href="#activities">Activities</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#gallary">Gallery</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#gallary">Gallery</a>
+            </li>
           <li class="nav-item">
             <a class="nav-link" href="#contactus">Contact Us</a>
           </li>
+      </section>
         </ul>
       </div>
     </div>
